# DataSentinel

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
dq_core/: __init__.py  config.py  models.py  registry.py
dq_core/adapters/: __init__.py  local_adapter.py  s3_adapter.py  snowflake_adapter.py  spark_adapter.py
dq_core/api/: __init__.py  server.py
dq_core/checks/: __init__.py  expectations.py  freshness.py  schema.py
dq_core/cli/: __init__.py  main.py  setup_demo.py
dq_core/dashboard/: app.py
dq_core/profiling/: __init__.py  anomalies.py  history_store.py  profile.py
dq_core/scoring/: __init__.py  governance.py  score.py
dq_core/sinks/: __init__.py  json_sink.py
examples/configs/: demo_local.yaml
examples/data/: customers.csv  transactions.csv
tests/: test_expectations.py  test_scoring.py
